--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ GOOGLE_CLIENT_ID=181531159513-t6i66mvv2mth9dnhkk5nlei8cj8c0qm5.apps.googleuserco
 GOOGLE_CLIENT_SECRET=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
 NEXTAUTH_SECRET=sOSoQoGsvh6vwgSByu0uHT9TBDbL0L269VOxIxsSEzI=
 NEXTAUTH_URL=http://localhost:3000
+CLOUDINARY_NAME=dku2yyvhy
+CLOUDINARY_KEY=554966791579688
+CLOUDINARY_SECRET=a0awWNtbT9vI-SYUKty8lFQomVU
