--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "5.1.3"
   },
   "devDependencies": {
-    "@grafbase/sdk": "^0.1.0"
+    "@grafbase/sdk": "^0.1.0",
+    "find-unused-exports": "^5.0.0"
   }
 }
