--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ NEXTAUTH_URL=http://localhost:3000
 CLOUDINARY_NAME=dku2yyvhy
 CLOUDINARY_KEY=554966791579688
 CLOUDINARY_SECRET=a0awWNtbT9vI-SYUKty8lFQomVU
+
+MAN APAGA ISSO.
